use formatted() instead of String.format()